@startuml
'https://plantuml.com/class-diagram

class Person {
    -name
    -phone
    -email
    -address
    -tags
    -remark
}
class Mentor {
    -centre
}

class Student {
    -centre
    -mentor
    -mentorString
}

Person <|-- Mentor
Person <|-- Student

Student --> Mentor : mentored by

@enduml
